Adding some more game logic for woodcutting

--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <html>
     <head>
-        <title>Lojko Hunter</title>
-        
-        <meta property="og:title" content="Lojko Hunter">
-        <meta property="og:site_name" content="Lojko Hunter">
-        <meta property="og:url" content="http://www.jumbledjargon.website/lojkohunter/">
-        <meta property="og:description" content="Lojko is loose around the office again...">
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="http://www.jumbledjargon.website/lojkohunter/img/share-img.jpg" />
+        <title>MicroClickRS</title>
         <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-        <script src="js/lojkohunter.js"></script>
+        <script src="js/microclickrs.js"></script>
         <style>
             html, body {
                 padding: 0;
                 margin: 0;
                 height: 100%;
                 width: 100%;
-                background-color: #000;
+                background-color: #fff;
             }
             #container {
                 position: relative;
