--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 transform: translateY(-50%);
             }
             #game {
+                background-color: #fafafa;
                 position: relative;
                 max-width: 100%;
                 max-height: 100%;
@@ -25,7 +26,7 @@
     </head>
     <body onload="init();">
         <div id="container">
-            <canvas id="game" width="1920" height="1080"></canvas>
+            <canvas id="game" width="700" height="850"></canvas>
         </div>
     </body>
 </html>
