Split code into logical files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>MicroClickRS</title>
         <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
         <script src="js/microclickrs.js"></script>
+        <script src="js/woodcutting.js"></script>
         <style>
             html, body {
                 padding: 0;
