Added ability to switch minigame types correctly, prevented chains from spawning in on stages they shouldn't spawn in on

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
         <script src="js/microclickrs.js"></script>
         <script src="js/woodcutting.js"></script>
+        <script src="js/farming.js"></script>
         <style>
             html, body {
                 padding: 0;
