Tweaking the game ready for review

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>MicroClickRS</title>
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
         <script src="js/microclickrs.js"></script>
         <script src="js/woodcutting.js"></script>
@@ -28,7 +29,7 @@
     </head>
     <body onload="init();">
         <div id="container">
-            <canvas id="game" width="700" height="850"></canvas>
+            <canvas id="game" width="1080" height="1500"></canvas>
         </div>
     </body>
 </html>
