--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 margin: 0;
                 height: 100%;
                 width: 100%;
-                background-color: #fff;
+                background-color: #99D9EA;
             }
             #container {
                 position: relative;
@@ -20,7 +20,7 @@
                 transform: translateY(-50%);
             }
             #game {
-                background-color: #fafafa;
+                background-color: #99D9EA;
                 position: relative;
                 max-width: 100%;
                 max-height: 100%;
@@ -29,7 +29,7 @@
     </head>
     <body onload="init();">
         <div id="container">
-            <canvas id="game" width="1080" height="1500"></canvas>
+            <canvas id="game" width="1080" height="1600"></canvas>
         </div>
     </body>
 </html>
